--- a/DoddingtonCarnival.Blazor/Pages/_Layout.cshtml
+++ b/DoddingtonCarnival.Blazor/Pages/_Layout.cshtml
@@ -10,11 +10,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="robots" content="index">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- HTML Meta Tags -->
     <title>Doddington Village Sports and Carnival</title>
-    <meta name="description" content="A fun-filled day for the whole family! From floats and fancy dress at the Carnival, to action packed races at the Sports Afternoon!">
+    <meta name="description" content="Doddington Village Sports & Carnival is a fun-filled day for the whole family! From a morning procession of traditional floats and fancy dress competitions at the Carnival, through to an action packed afternoon of races, sports and bouncy castles at the Sports Afternoon! Light refreshments, such as teas, coffees and cold drinks, followed by burgers and hot dogs from the 1st Doddington Scouts. Local market stalls of items that you didn't know that you needed are also available, so make sure you come over and see!">
 
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="Doddington Village Sports and Carnival">
