--- a/DoddingtonCarnival.Blazor/Shared/MainLayout.razor
+++ b/DoddingtonCarnival.Blazor/Shared/MainLayout.razor
@@ -6985,6 +6985,8 @@ z" />
 									<li class="ms-3"><a class="link-dark" href="https://www.facebook.com/doddingtoncarnivalandsports" target="_blank"><svg class="bi" width="24" height="24"><use xlink:href="#facebook" /></svg></a></li>
 								</ul>
 							</div>
+
+							<div>Calendar data powered by <a href="https://www.doddington.org.uk" target="_blank">www.doddington.org.uk</a></div>
 						</div>
 					</div>
 
