--- a/DoddingtonCarnival.Blazor/Pages/FeatureSportsAfternoon/SportsAfternoonPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureSportsAfternoon/SportsAfternoonPage.razor
@@ -68,38 +68,11 @@
                 </div>
             </div>
 
-            <DoddingtonCarnival.Blazor.Shared.Sponsors._2023_CB3 /> 
+            @* <DoddingtonCarnival.Blazor.Shared.Sponsors._2023_CB3 />  *@
 
-            <div class="row">
-                <div class="col-lg-6 col-12">
-                    <div class="card eventCard">
-                        <div class="card-header">
-                            Official Schedule
-                        </div>
-                        <div class="card-body">
-                            <p class="eventHeading">Saturday 1st July 2023</p>
-                            <p>Saturday 1st July 2023</p>
-                            <p>07:00 - Gates open to the stall holders (for set-up only).</p>
-                            <p>13:30 - Gates open to the public.</p>
-                            <p>14:30 - Children's Races commence.</p>
-                            <p>18:00 - Expected end of day.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-12">
-                    <div class="card eventCard">
-                        <div class="card-header">
-                            Download Stall Form
-                        </div>
-                        <div class="card-body">
-                            <p>Download the Stall Form (PDF) file to register your interest for running a stall.</p>
-                            <a href="/pdfs/stalls/2023 field stall form.pdf" target="_blank" class="btn btn-primary btn-block btn-lg px-4 me-md-2">Download now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+           <SportsAfternoonComponent />
 
-            <SharedRaffleTickets />
+           @*  <SharedRaffleTickets /> *@
 
             @*<div class="row flex-lg-row-reverse align-items-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-6">
